<resources>
    <string name="app_name">grow</string>
    <string name="exercise_name">%1$s</string>
    <string name="exercise_sets">%1$d sets</string>
    <string name="exercise_reps">%1$d reps</string>
    <string name="exercise_weight">%1$d kg</string>
    <string name="start_workout">Start Workout</string>
    <string name="toolbar_title_workout">Workout</string>
    <string name="toolbar_title_exercise">Exercise</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_workout">Workout</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_stats">Stats</string>

    <string name="stats_height">Height</string>
    <string name="stats_height_value">%1$dcm</string>
    <string name="stats_weight">Weight</string>
    <string name="stats_weight_value">%1$dkg</string>
    <string name="stats_waist">Waist</string>
    <string name="stats_waist_value">%1$dcm</string>
    <string name="stats_estimated_bmr">Estimated BMR</string>
    <string name="stats_edit">Edit</string>
    <string name="stats_steps_taken_today">Steps taken today</string>
</resources>
