<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/exercise_card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/exerciseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="26sp"
                android:layout_centerHorizontal="true"
                android:text="@string/exercise_name" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/exerciseName">

                <TextView
                    android:id="@+id/exerciseSets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:gravity="end"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="40dp"
                    android:layout_weight=".49"
                    android:text="@string/exercise_sets" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight=".02"
                    android:layout_gravity="bottom"
                    android:text="|"/>

                <TextView
                    android:id="@+id/exerciseReps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="bottom"
                    android:layout_weight=".49"
                    android:text="@string/exercise_reps" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>